--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "@apollo/client": "3.5.9",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.5",
+    "@material-tailwind/react": "^1.2.4",
     "@openzeppelin/contracts": "4.4.1",
     "@types/formidable": "2.0.4",
     "classnames": "2.3.1",
+    "dotenv": "^16.0.3",
     "formidable": "2.0.1",
     "formik": "2.2.9",
     "next": "12.0.10",
@@ -22,6 +28,7 @@
     "react-blockies": "1.4.1",
     "react-dom": "17.0.2",
     "react-toastify": "8.2.0",
+    "swiper": "^8.4.5",
     "web3modal": "1.9.5",
     "yup": "0.32.11"
   },
